test/class/invalid/emptyClass.wacc
begin
  class Dog is
  end
  int x = 0;
  println x
end
